force-app/main/default/objects/E_Client_Suitability__c/E_Client_Suitability__c.object-meta.xml
<CustomObject>
    <label>E-Client Suitability</label>
    <nameField>
        <displayFormat>CS-{YYMMDD}-{000}</displayFormat>
        <label>E-Client Suitability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Client Suitability</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>