force-app/main/default/objects/E_Client_Suitability__c/fields/CS_As_Of_Date_Murex__c.field-meta.xml
<CustomField>
    <fullName>CS_As_Of_Date_Murex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As Of Date Murex</label>
    <type>Date</type>
</CustomField>