force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Basic_Flag__c.field-meta.xml
<CustomField>
    <fullName>CS_Basic_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic</label>
    <type>Checkbox</type>
</CustomField>