force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Check_user_RM__c.field-meta.xml
<CustomField>
    <fullName>CS_Check_user_RM__c</fullName>
    <formula>IF($User.Id  = CS_RM__r.Id, TRUE, FALSE)</formula>
    <label>Check user RM</label>
    <type>Checkbox</type>
</CustomField>