force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Customer__c.field-meta.xml
<CustomField>
    <fullName>CS_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E-Client Suitability</relationshipLabel>
    <relationshipName>E_client_Suitability_Review</relationshipName>
    <type>Lookup</type>
</CustomField>