force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>CS_Customer_Segment__c</fullName>
    <formula>IF( OR(CS_Customer__r.Customer_Segment_Team__c= &quot;MB : MB-FI&quot;,CS_Customer__r.Customer_Segment_Team__c= &quot;MB : FI&quot;),

&quot;FI&quot;, 

CS_Customer__r.Core_Banking_Suggested_Segment__c)</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>