force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Customer_Survey_A__c.field-meta.xml
<CustomField>
    <fullName>CS_Customer_Survey_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Customer Survey A</label>
    <referenceTo>Survey_Sheet__c</referenceTo>
    <relationshipLabel>E-Client Suitability</relationshipLabel>
    <relationshipName>E_Client_Suitability</relationshipName>
    <type>Lookup</type>
</CustomField>