force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Customer_Survey_B__c.field-meta.xml
<CustomField>
    <fullName>CS_Customer_Survey_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Customer Survey B</label>
    <referenceTo>Survey_Sheet__c</referenceTo>
    <relationshipLabel>E-Client Suitability (CS Customer Survey B)</relationshipLabel>
    <relationshipName>E_Client_Suitability1</relationshipName>
    <type>Lookup</type>
</CustomField>