force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Email_RM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CS_Email_RM_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email RM Manager</label>
    <type>Email</type>
</CustomField>