force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Expiry_Date_Next__c.field-meta.xml
<CustomField>
    <fullName>CS_Expiry_Date_Next__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Expiry Date (Next)</label>
    <type>Date</type>
</CustomField>