force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Is_Customer_Segment_Change__c.field-meta.xml
<CustomField>
    <fullName>CS_Is_Customer_Segment_Change__c</fullName>
    <description>Check if Customer segment in Account still same</description>
    <formula>IF(  CS_Customer_Segment__c !=  CS_Stamped_Customer_Segment__c  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if Customer segment in Account still same</inlineHelpText>
    <label>CS Is Customer Segment Change</label>
    <type>Checkbox</type>
</CustomField>