force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Link_to_ecs__c.field-meta.xml
<CustomField>
    <fullName>CS_Link_to_ecs__c</fullName>
    <formula>LEFT ( $Api.Partner_Server_URL_440,  FIND(&apos;.com&apos;, $Api.Partner_Server_URL_440)+4) + &quot;lightning/r/E_Client_Suitability__c/&quot; + Id + &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Link to ecs</label>
    <type>Text</type>
</CustomField>