force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Murex_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Murex_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Murex ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>