force-app/main/default/objects/E_Client_Suitability__c/fields/CS_New_Customer_flag__c.field-meta.xml
<CustomField>
    <fullName>CS_New_Customer_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer</label>
    <type>Checkbox</type>
</CustomField>