force-app/main/default/objects/E_Client_Suitability__c/fields/CS_RM__c.field-meta.xml
<CustomField>
    <fullName>CS_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Client_Suitability2</relationshipName>
    <type>Lookup</type>
</CustomField>