force-app/main/default/objects/E_Client_Suitability__c/fields/CS_RM_TH_Approved_Date_Tme__c.field-meta.xml
<CustomField>
    <fullName>CS_RM_TH_Approved_Date_Tme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM TH Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>