force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales (Owner)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Client_Suitability</relationshipName>
    <type>Lookup</type>
</CustomField>