force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Sales_Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_Owner_Segment__c</fullName>
    <formula>CS_Sales_Owner__r.Reporting_Segment__c</formula>
    <label>Sales Owner Segment</label>
    <type>Text</type>
</CustomField>