force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Sales_TH__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales TH</label>
    <length>80</length>
    <type>Text</type>
</CustomField>