force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Sales_TH_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_TH_Approved_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales TH Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>