force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Score__c.field-meta.xml
<CustomField>
    <fullName>CS_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>