force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>CS_Score_Formula__c</fullName>
    <formula>CS_Customer_Survey_B__r.Total_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Score Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>