force-app/main/default/objects/E_Client_Suitability__c/fields/CS_SIgn_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_SIgn_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS SIgn Date</label>
    <type>Date</type>
</CustomField>