force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Stamped_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>CS_Stamped_Customer_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stamped Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>