force-app/main/default/objects/E_Client_Suitability__c/fields/CS_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Pending RM TH</fullName>
            </value>
            <value>
                <fullName>RM TH Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Sales</fullName>
            </value>
            <value>
                <fullName>Pending Sales TH</fullName>
            </value>
            <value>
                <fullName>Sales TH Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
                <isActive>false</isActive>
                <label>Pending Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>