force-app/main/default/objects/E_Client_Suitability__c/fields/CS_TMB_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_TMB_Cust_ID__c</fullName>
    <formula>CS_Customer__r.TMB_Customer_ID_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMB Cust ID</label>
    <type>Text</type>
</CustomField>