force-app/main/default/objects/E_Client_Suitability__c/fields/Customer_s_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Group__c</fullName>
    <formula>CS_Customer__r.Group__r.Name</formula>
    <label>Customer&apos;s Group</label>
    <type>Text</type>
</CustomField>