force-app/main/default/objects/E_Client_Suitability__c/fields/ECM_Repository__c.field-meta.xml
<CustomField>
    <fullName>ECM_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ECM Repository</label>
    <referenceTo>ECM_Repository__c</referenceTo>
    <relationshipLabel>E-Client Suitability</relationshipLabel>
    <relationshipName>E_Client_Suitability_ECM_Repository</relationshipName>
    <type>Lookup</type>
</CustomField>