force-app/main/default/objects/E_Client_Suitability__c/fields/Group_Master__c.field-meta.xml
<CustomField>
    <fullName>Group_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Master</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>E-Client Suitability</relationshipLabel>
    <relationshipName>E_Client_Suitability</relationshipName>
    <type>Lookup</type>
</CustomField>