force-app/main/default/objects/E_Client_Suitability__c/fields/Murex_Fund_Manager__c.field-meta.xml
<CustomField>
    <fullName>Murex_Fund_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fund Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>