force-app/main/default/objects/E_Client_Suitability__c/fields/New_CS_Level__c.field-meta.xml
<CustomField>
    <fullName>New_CS_Level__c</fullName>
    <label>New CS Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Non-Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Fundamental</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Sophisticated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>