force-app/main/default/objects/E_Client_Suitability__c/fields/PDF_Generated_by__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generated_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PDF Generated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>