force-app/main/default/objects/E_Client_Suitability__c/fields/PDF_Generated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generated_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PDF Generated Date/Time</label>
    <type>DateTime</type>
</CustomField>