force-app/main/default/objects/E_Client_Suitability__c/fields/Reverse_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Reason__c</fullName>
    <description>comment text</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reverse Reason</label>
    <type>TextArea</type>
</CustomField>