force-app/main/default/objects/E_Client_Suitability__c/fields/RM_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>RM_Submitted_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>