force-app/main/default/objects/E_Client_Suitability__c/fields/RM_TH_Approve_DT__c.field-meta.xml
<CustomField>
    <fullName>RM_TH_Approve_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM TH Approve Date/Time</label>
    <type>DateTime</type>
</CustomField>