force-app/main/default/objects/E_Client_Suitability__c/fields/Sale_Submit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sale_Submit_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Submit Date/Time</label>
    <type>DateTime</type>
</CustomField>