force-app/main/default/objects/E_Client_Suitability__c/fields/Sales_TH_Approved_DT__c.field-meta.xml
<CustomField>
    <fullName>Sales_TH_Approved_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales TH Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>