force-app/main/default/objects/E_Client_Suitability__c/fields/Select_RM_TH_Approver__c.field-meta.xml
<CustomField>
    <fullName>Select_RM_TH_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select RM TH Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Client_Suitability1</relationshipName>
    <type>Lookup</type>
</CustomField>