force-app/main/default/objects/E_Client_Suitability__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>IF( ISBLANK( CS_Cancelled_By__c ) &amp;&amp;  
CS_Basic_Flag__c  = False,CS_Customer_Survey_B__r.Total_Score__c ,  NULL  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>