force-app/main/default/objects/E_Client_Suitability__c/recordTypes/CS_Completed.recordType-meta.xml
<RecordType>
    <fullName>CS_Completed</fullName>
    <active>true</active>
    <label>Completed</label>
</RecordType>