force-app/main/default/objects/E_Client_Suitability__c/recordTypes/CS_Pending_Review.recordType-meta.xml
<RecordType>
    <fullName>CS_Pending_Review</fullName>
    <active>true</active>
    <label>Pending Review</label>
</RecordType>