force-app/main/default/objects/E_Client_Suitability__c/recordTypes/CS_Pending_Sale.recordType-meta.xml
<RecordType>
    <fullName>CS_Pending_Sale</fullName>
    <active>true</active>
    <label>Pending Sale</label>
</RecordType>