force-app/main/default/objects/E_Client_Suitability__c/recordTypes/CS_Reviewing.recordType-meta.xml
<RecordType>
    <fullName>CS_Reviewing</fullName>
    <active>true</active>
    <label>Reviewing</label>
</RecordType>