force-app/main/default/objects/E_Client_Suitability__c/listViews/CB_Team_Overdue_CS.listView-meta.xml
<ListView>
    <fullName>CB_Team_Overdue_CS</fullName>
    <columns>NAME</columns>
    <columns>CS_As_Of_Date_Murex__c</columns>
    <columns>CS_Customer__c</columns>
    <columns>CS_Status__c</columns>
    <columns>CS_Level__c</columns>
    <columns>CS_Expiry_Date_Next__c</columns>
    <columns>CS_RM__c</columns>
    <columns>CS_Sales_Owner__c</columns>
    <columns>CS_Sales_Owner_Segment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CS_Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <filters>
        <field>CS_Stamped_Customer_Segment__c</field>
        <operation>equals</operation>
        <value>CB</value>
    </filters>
    <label>CB Team Overdue CS</label>
    <sharedTo>
        <role>Compliance_TH</role>
        <role>Compliance_User</role>
        <roleAndSubordinates>MB_CM_Sales_TH_TL</roleAndSubordinates>
    </sharedTo>
</ListView>