force-app/main/default/objects/E_Client_Suitability__c/listViews/CM_Team_CB_E_Client_Suitability.listView-meta.xml
<ListView>
    <fullName>CM_Team_CB_E_Client_Suitability</fullName>
    <columns>NAME</columns>
    <columns>CS_As_Of_Date_Murex__c</columns>
    <columns>CS_Customer__c</columns>
    <columns>CS_Status__c</columns>
    <columns>CS_Level__c</columns>
    <columns>CS_Expiry_Date_Next__c</columns>
    <columns>CS_RM__c</columns>
    <columns>CS_Sales_Owner__c</columns>
    <columns>CS_Sales_Owner_Segment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CS_Suspend_flag__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CM Team CB</label>
    <language>en_US</language>
    <queue>CM_Team_CB</queue>
    <sharedTo>
        <roleAndSubordinates>Compliance_TH</roleAndSubordinates>
        <roleAndSubordinates>Compliance_User</roleAndSubordinates>
        <roleAndSubordinates>MB_CM_Sales_TH_TL</roleAndSubordinates>
    </sharedTo>
</ListView>