force-app/main/default/objects/E_Client_Suitability__c/listViews/CS_Team_SME_E_Client_Suitability.listView-meta.xml
<ListView>
    <fullName>CS_Team_SME_E_Client_Suitability</fullName>
    <columns>NAME</columns>
    <columns>CS_Customer__c</columns>
    <columns>CS_Status__c</columns>
    <columns>CS_Level__c</columns>
    <columns>CS_RM__c</columns>
    <columns>CS_Sales_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CS_Suspend_flag__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CM Team SME</label>
    <language>en_US</language>
    <queue>CM_Team_SME</queue>
    <sharedTo>
        <roleAndSubordinates>BB_SMERetail_CM_Sales_TH_TL</roleAndSubordinates>
        <roleAndSubordinates>SME_CM_Sales</roleAndSubordinates>
    </sharedTo>
</ListView>