force-app/main/default/objects/E_Client_Suitability__c/listViews/FI_Team_Pending_Review_CS.listView-meta.xml
<ListView>
    <fullName>FI_Team_Pending_Review_CS</fullName>
    <columns>NAME</columns>
    <columns>CS_Customer__c</columns>
    <columns>CS_Status__c</columns>
    <columns>CS_Level__c</columns>
    <columns>CS_Expiry_Date_Next__c</columns>
    <columns>CS_RM__c</columns>
    <columns>CS_Sales_Owner__c</columns>
    <columns>CS_Sales_Owner_Segment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CS_Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <filters>
        <field>CS_Stamped_Customer_Segment__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <label>FI Team Pending Review CS</label>
    <sharedTo>
        <role>FI_CM_Sales</role>
        <role>FI_CM_Sales_TH_TL</role>
    </sharedTo>
</ListView>