force-app/main/default/objects/E_Client_Suitability__c/listViews/MB_CB_Team_In_Progress_CS.listView-meta.xml
<ListView>
    <fullName>MB_CB_Team_In_Progress_CS</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>CS_Customer__c</columns>
    <columns>CS_Status__c</columns>
    <columns>CS_Level__c</columns>
    <columns>CS_Expiry_Date_Next__c</columns>
    <columns>CS_RM__c</columns>
    <columns>CS_Sales_Owner__c</columns>
    <columns>CS_Sales_Owner_Segment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CS_Stamped_Customer_Segment__c</field>
        <operation>equals</operation>
        <value>MB</value>
    </filters>
    <filters>
        <field>CS_Stamped_Customer_Segment__c</field>
        <operation>equals</operation>
        <value>CB</value>
    </filters>
    <filters>
        <field>CS_Status__c</field>
        <operation>equals</operation>
        <value>Reviewing,Pending RM TH,RM TH Rejected,Pending Sales,Pending Sales TH,Sales TH Rejected</value>
    </filters>
    <label>MB/CB Team In Progress CS</label>
    <sharedTo>
        <role>BB_SMERetail_CM_Sales_TH_TL</role>
        <role>MB_CB_CM_Sales_TH_TL</role>
    </sharedTo>
</ListView>